Rename FS button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="topbar">
           <h1 class="page-title">Preboard Ops Control Dashboard</h1>
           <div class="last-updated">Last Updated: 24 Dec 2025 11:02 AM</div>
-          <a class="nav-button" href="in-progress.html">In-Progress Flights</a>
+          <a class="nav-button" href="in-progress.html">Click to FS Page</a>
           <div class="tabs" role="tablist">
             <button class="tab" type="button" role="tab" aria-selected="false">All</button>
             <button class="tab active" type="button" role="tab" aria-selected="true">T1</button>
