--- a/in-progress.html
+++ b/in-progress.html
@@ -20,10 +20,12 @@
             <div class="header-left">
               <h1 class="page-title">In-Progress Flights</h1>
               <div class="last-updated">Last Updated: 24 Dec 2025 11:02 AM</div>
+              <div class="fs-update">FS: <span id="fs-name">Not Assigned</span></div>
             </div>
             <div class="header-right">
               <a class="nav-button" href="index.html">Click to OS Page</a>
               <div class="header-actions">
+                <button class="pull-random" type="button" id="assign-gate">Assign Gate</button>
                 <button class="pull-random" type="button" id="pull-random">Random Pull Team</button>
                 <button class="pull-random" type="button" id="toggle-teams">Hide Teams</button>
               </div>
@@ -945,6 +947,16 @@
           <ul class="modal-close-list"></ul>
         </div>
         <button class="modal-action" type="button">Pull Completed</button>
+      </div>
+    </div>
+    <div class="modal-backdrop assign-backdrop"></div>
+    <div class="modal assign-modal" role="dialog" aria-modal="true" aria-label="Assign Gate">
+      <div class="modal-header">
+        <h2>Assign Gate</h2>
+        <button class="modal-close assign-close" type="button">Close</button>
+      </div>
+      <div class="modal-body">
+        <div class="assign-grid" id="assign-gate-list"></div>
       </div>
     </div>
     <script src="app.js"></script>
