Allow multi-gate assignment

--- a/in-progress.html
+++ b/in-progress.html
@@ -965,6 +965,7 @@
           <option>FS - J. Tan</option>
         </select>
         <div class="assign-grid" id="assign-gate-list"></div>
+        <button class="modal-action assign-submit" type="button" id="assign-submit">Submit</button>
       </div>
     </div>
     <script src="app.js"></script>
