Add assignment viewer in modal

--- a/in-progress.html
+++ b/in-progress.html
@@ -985,7 +985,11 @@
           <option>FS - J. Tan</option>
         </select>
         <div class="assign-grid" id="assign-gate-list"></div>
-        <button class="modal-action assign-submit" type="button" id="assign-submit">Submit</button>
+        <div class="assign-actions">
+          <button class="modal-action assign-submit" type="button" id="assign-submit">Submit</button>
+          <button class="modal-action assign-view" type="button" id="assign-view">View Assignments</button>
+        </div>
+        <div class="assign-summary is-hidden" id="assign-summary"></div>
       </div>
     </div>
     <script src="app.js"></script>
