Color unassigned cards by terminal

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             Flight Not Assign Yet <span>- Next 1 Hour Flight Without Any Teams Assigned</span>
           </h2>
           <div class="card-grid">
-            <article class="card muted-card compact">
+            <article class="card muted-card compact t3-card">
               <div class="card-header">
                 <div class="card-title">LH 604</div>
                 <div class="card-sub sandwich-gate">Gate B9</div>
@@ -45,7 +45,7 @@
                 <span>STD 1240hrs</span>
               </div>
             </article>
-            <article class="card muted-card compact">
+            <article class="card muted-card compact t3-card">
               <div class="card-header">
                 <div class="card-title">KL 321</div>
                 <div class="card-sub sandwich-gate">Gate B9</div>
@@ -59,7 +59,7 @@
                 <span>STD 1240hrs</span>
               </div>
             </article>
-            <article class="card muted-card compact">
+            <article class="card muted-card compact t1-card">
               <div class="card-header">
                 <div class="card-title">IB 507</div>
                 <div class="card-sub">Gate D5</div>
@@ -72,7 +72,7 @@
                 <span>STD 1315hrs</span>
               </div>
             </article>
-            <article class="card muted-card compact">
+            <article class="card muted-card compact t3-card">
               <div class="card-header">
                 <div class="card-title">NZ 842</div>
                 <div class="card-sub">Gate A2</div>
@@ -85,7 +85,7 @@
                 <span>STD 1355hrs</span>
               </div>
             </article>
-            <article class="card muted-card compact">
+            <article class="card muted-card compact t2-card">
               <div class="card-header">
                 <div class="card-title">AI 274</div>
                 <div class="card-sub">Gate F4</div>
@@ -98,7 +98,7 @@
                 <span>STD 1400hrs</span>
               </div>
             </article>
-            <article class="card muted-card compact">
+            <article class="card muted-card compact t1-card">
               <div class="card-header">
                 <div class="card-title">BA 118</div>
                 <div class="card-sub">Gate C2</div>
@@ -111,7 +111,7 @@
                 <span>STD 1440hrs</span>
               </div>
             </article>
-            <article class="card muted-card compact">
+            <article class="card muted-card compact t3-card">
               <div class="card-header">
                 <div class="card-title">QF 512</div>
                 <div class="card-sub">Gate A6</div>
@@ -124,7 +124,7 @@
                 <span>STD 1455hrs</span>
               </div>
             </article>
-            <article class="card muted-card compact">
+            <article class="card muted-card compact t2-card">
               <div class="card-header">
                 <div class="card-title">EK 209</div>
                 <div class="card-sub">Gate E7</div>
@@ -137,7 +137,7 @@
                 <span>STD 1510hrs</span>
               </div>
             </article>
-            <article class="card muted-card compact">
+            <article class="card muted-card compact t3-card">
               <div class="card-header">
                 <div class="card-title">JL 728</div>
                 <div class="card-sub">Gate B4</div>
@@ -150,7 +150,7 @@
                 <span>STD 1540hrs</span>
               </div>
             </article>
-            <article class="card muted-card compact">
+            <article class="card muted-card compact t1-card">
               <div class="card-header">
                 <div class="card-title">LH 892</div>
                 <div class="card-sub">Gate D1</div>
@@ -163,7 +163,7 @@
                 <span>STD 1550hrs</span>
               </div>
             </article>
-            <article class="card muted-card compact">
+            <article class="card muted-card compact t1-card">
               <div class="card-header">
                 <div class="card-title">AF 332</div>
                 <div class="card-sub">Gate C7</div>
@@ -176,7 +176,7 @@
                 <span>STD 1610hrs</span>
               </div>
             </article>
-            <article class="card muted-card compact">
+            <article class="card muted-card compact t2-card">
               <div class="card-header">
                 <div class="card-title">CX 240</div>
                 <div class="card-sub">Gate E2</div>
@@ -189,7 +189,7 @@
                 <span>STD 1630hrs</span>
               </div>
             </article>
-            <article class="card muted-card compact">
+            <article class="card muted-card compact t3-card">
               <div class="card-header">
                 <div class="card-title">TG 611</div>
                 <div class="card-sub">Gate A4</div>
@@ -202,7 +202,7 @@
                 <span>STD 1645hrs</span>
               </div>
             </article>
-            <article class="card muted-card compact">
+            <article class="card muted-card compact t2-card">
               <div class="card-header">
                 <div class="card-title">UA 730</div>
                 <div class="card-sub">Gate F2</div>
@@ -215,7 +215,7 @@
                 <span>STD 1700hrs</span>
               </div>
             </article>
-            <article class="card muted-card compact">
+            <article class="card muted-card compact t3-card">
               <div class="card-header">
                 <div class="card-title">KL 881</div>
                 <div class="card-sub">Gate B6</div>
