Auto-assign unassigned badges and drop Updated

--- a/index.html
+++ b/index.html
@@ -31,16 +31,15 @@
           <div class="card-grid">
             <article class="card muted-card compact t3-card">
               <div class="card-header">
-                <div class="card-title">LH 604</div>
+                <div class="card-title-stack">
+                  <div class="card-title">LH 604</div>
+                  <div class="card-route">FRA</div>
+                </div>
                 <div class="card-sub sandwich-gate">Gate B9</div>
               </div>
               <div class="unassigned-badge">Unassigned</div>
-              <div class="change-badge">Updated</div>
               <div class="changed-field">Gate: <span class="old">B2</span> <span class="new">B9</span></div>
               <div class="sandwich-badge">Sandwich Gate</div>
-              <div class="card-meta">
-                <span>FRA</span>
-              </div>
               <div class="card-times changed-field">
                 <span>ETD <span class="old">1150hrs</span> <span class="new">1205hrs</span></span>
                 <span>STD <span class="old">1220hrs</span> <span class="new">1240hrs</span></span>
@@ -48,14 +47,14 @@
             </article>
             <article class="card muted-card compact t3-card">
               <div class="card-header">
-                <div class="card-title">KL 321</div>
+                <div class="card-title-stack">
+                  <div class="card-title">KL 321</div>
+                  <div class="card-route">AMS</div>
+                </div>
                 <div class="card-sub sandwich-gate">Gate B9</div>
               </div>
               <div class="unassigned-badge">Unassigned</div>
               <div class="sandwich-badge">Sandwich Gate</div>
-              <div class="card-meta">
-                <span>AMS</span>
-              </div>
               <div class="card-times">
                 <span>ETD 1205hrs</span>
                 <span>STD 1240hrs</span>
@@ -63,15 +62,14 @@
             </article>
             <article class="card muted-card compact t1-card">
               <div class="card-header">
-                <div class="card-title">IB 507</div>
+                <div class="card-title-stack">
+                  <div class="card-title">IB 507</div>
+                  <div class="card-route">MAD</div>
+                </div>
                 <div class="card-sub">Gate D5</div>
               </div>
               <div class="unassigned-badge">Unassigned</div>
-              <div class="change-badge">Updated</div>
               <div class="changed-field">Gate: <span class="old">C7</span> <span class="new">D5</span></div>
-              <div class="card-meta">
-                <span>MAD</span>
-              </div>
               <div class="card-times changed-field">
                 <span>ETD <span class="old">1235hrs</span> <span class="new">1255hrs</span></span>
                 <span>STD <span class="old">1300hrs</span> <span class="new">1315hrs</span></span>
@@ -79,11 +77,11 @@
             </article>
             <article class="card muted-card compact t3-card">
               <div class="card-header">
-                <div class="card-title">NZ 842</div>
+                <div class="card-title-stack">
+                  <div class="card-title">NZ 842</div>
+                  <div class="card-route">MEL</div>
+                </div>
                 <div class="card-sub">Gate A2</div>
-              </div>
-              <div class="card-meta">
-                <span>MEL</span>
               </div>
               <div class="card-times">
                 <span>ETD 1330hrs</span>
@@ -92,15 +90,14 @@
             </article>
             <article class="card muted-card compact t2-card">
               <div class="card-header">
-                <div class="card-title">AI 274</div>
+                <div class="card-title-stack">
+                  <div class="card-title">AI 274</div>
+                  <div class="card-route">AKL</div>
+                </div>
                 <div class="card-sub">Gate F4</div>
               </div>
               <div class="unassigned-badge">Unassigned</div>
-              <div class="change-badge">Updated</div>
               <div class="changed-field">Gate: <span class="old">E3</span> <span class="new">F4</span></div>
-              <div class="card-meta">
-                <span>AKL</span>
-              </div>
               <div class="card-times changed-field">
                 <span>ETD <span class="old">1320hrs</span> <span class="new">1345hrs</span></span>
                 <span>STD <span class="old">1345hrs</span> <span class="new">1400hrs</span></span>
@@ -108,11 +105,11 @@
             </article>
             <article class="card muted-card compact t1-card">
               <div class="card-header">
-                <div class="card-title">BA 118</div>
+                <div class="card-title-stack">
+                  <div class="card-title">BA 118</div>
+                  <div class="card-route">LHR</div>
+                </div>
                 <div class="card-sub">Gate C2</div>
-              </div>
-              <div class="card-meta">
-                <span>LHR</span>
               </div>
               <div class="card-times">
                 <span>ETD 1410hrs</span>
@@ -121,11 +118,11 @@
             </article>
             <article class="card muted-card compact t3-card">
               <div class="card-header">
-                <div class="card-title">QF 512</div>
+                <div class="card-title-stack">
+                  <div class="card-title">QF 512</div>
+                  <div class="card-route">SYD</div>
+                </div>
                 <div class="card-sub">Gate A6</div>
-              </div>
-              <div class="card-meta">
-                <span>SYD</span>
               </div>
               <div class="card-times">
                 <span>ETD 1425hrs</span>
@@ -134,14 +131,13 @@
             </article>
             <article class="card muted-card compact t2-card">
               <div class="card-header">
-                <div class="card-title">EK 209</div>
+                <div class="card-title-stack">
+                  <div class="card-title">EK 209</div>
+                  <div class="card-route">DXB</div>
+                </div>
                 <div class="card-sub">Gate E7</div>
               </div>
-              <div class="change-badge">Updated</div>
               <div class="changed-field">Gate: <span class="old">F6</span> <span class="new">E7</span></div>
-              <div class="card-meta">
-                <span>DXB</span>
-              </div>
               <div class="card-times changed-field">
                 <span>ETD <span class="old">1420hrs</span> <span class="new">1445hrs</span></span>
                 <span>STD <span class="old">1455hrs</span> <span class="new">1510hrs</span></span>
@@ -149,11 +145,11 @@
             </article>
             <article class="card muted-card compact t3-card">
               <div class="card-header">
-                <div class="card-title">JL 728</div>
+                <div class="card-title-stack">
+                  <div class="card-title">JL 728</div>
+                  <div class="card-route">NRT</div>
+                </div>
                 <div class="card-sub">Gate B4</div>
-              </div>
-              <div class="card-meta">
-                <span>NRT</span>
               </div>
               <div class="card-times">
                 <span>ETD 1505hrs</span>
@@ -162,11 +158,11 @@
             </article>
             <article class="card muted-card compact t1-card">
               <div class="card-header">
-                <div class="card-title">LH 892</div>
+                <div class="card-title-stack">
+                  <div class="card-title">LH 892</div>
+                  <div class="card-route">FRA</div>
+                </div>
                 <div class="card-sub">Gate D1</div>
-              </div>
-              <div class="card-meta">
-                <span>FRA</span>
               </div>
               <div class="card-times">
                 <span>ETD 1520hrs</span>
@@ -175,11 +171,11 @@
             </article>
             <article class="card muted-card compact t1-card">
               <div class="card-header">
-                <div class="card-title">AF 332</div>
+                <div class="card-title-stack">
+                  <div class="card-title">AF 332</div>
+                  <div class="card-route">CDG</div>
+                </div>
                 <div class="card-sub">Gate C7</div>
-              </div>
-              <div class="card-meta">
-                <span>CDG</span>
               </div>
               <div class="card-times">
                 <span>ETD 1535hrs</span>
@@ -188,11 +184,11 @@
             </article>
             <article class="card muted-card compact t2-card">
               <div class="card-header">
-                <div class="card-title">CX 240</div>
+                <div class="card-title-stack">
+                  <div class="card-title">CX 240</div>
+                  <div class="card-route">HKG</div>
+                </div>
                 <div class="card-sub">Gate E2</div>
-              </div>
-              <div class="card-meta">
-                <span>HKG</span>
               </div>
               <div class="card-times">
                 <span>ETD 1555hrs</span>
@@ -201,11 +197,11 @@
             </article>
             <article class="card muted-card compact t3-card">
               <div class="card-header">
-                <div class="card-title">TG 611</div>
+                <div class="card-title-stack">
+                  <div class="card-title">TG 611</div>
+                  <div class="card-route">BKK</div>
+                </div>
                 <div class="card-sub">Gate A4</div>
-              </div>
-              <div class="card-meta">
-                <span>BKK</span>
               </div>
               <div class="card-times">
                 <span>ETD 1615hrs</span>
@@ -214,11 +210,11 @@
             </article>
             <article class="card muted-card compact t2-card">
               <div class="card-header">
-                <div class="card-title">UA 730</div>
+                <div class="card-title-stack">
+                  <div class="card-title">UA 730</div>
+                  <div class="card-route">SFO</div>
+                </div>
                 <div class="card-sub">Gate F2</div>
-              </div>
-              <div class="card-meta">
-                <span>SFO</span>
               </div>
               <div class="card-times">
                 <span>ETD 1630hrs</span>
@@ -227,11 +223,11 @@
             </article>
             <article class="card muted-card compact t3-card">
               <div class="card-header">
-                <div class="card-title">KL 881</div>
+                <div class="card-title-stack">
+                  <div class="card-title">KL 881</div>
+                  <div class="card-route">AMS</div>
+                </div>
                 <div class="card-sub">Gate B6</div>
-              </div>
-              <div class="card-meta">
-                <span>AMS</span>
               </div>
               <div class="card-times">
                 <span>ETD 1650hrs</span>
