Add critical updates page and sandwich blink

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       <div class="frame">
         <header class="topbar">
           <h1 class="page-title">PREBOARD LIVE UPDATE BOARD</h1>
-          <div class="last-updated">Last Updated: 24 Dec 2025 11:02 AM</div>
           <a class="nav-button" href="in-progress.html">Click to FS Page</a>
+          <a class="nav-button" href="critical-updates.html">Click to Critical Updates</a>
+          <div class="last-updated">Last Updated: 24 Dec 2025 11:02 AM</div>
           <div class="tabs" role="tablist">
             <button class="tab active" type="button" role="tab" aria-selected="true" data-terminal="t1">T1</button>
             <button class="tab" type="button" role="tab" aria-selected="false" data-terminal="t2">T2</button>
@@ -29,9 +30,10 @@
         <section class="section" id="unassigned-flights">
           <h2 class="section-title">Critical Updates</h2>
           <div class="card-grid">
-            <article class="card muted-card compact t3-card">
+            <article class="card muted-card compact t3-card sandwich-card">
               <div class="card-header">
                 <div class="card-title-stack">
+                  <div class="sandwich-badge">Sandwich Gate</div>
                   <div class="card-title">LH 604</div>
                   <div class="card-route">FRA</div>
                 </div>
@@ -39,22 +41,21 @@
               </div>
               <div class="unassigned-badge">Unassigned</div>
               <div class="changed-field">Gate: <span class="old">B2</span> <span class="new">B9</span></div>
-              <div class="sandwich-badge">Sandwich Gate</div>
               <div class="card-times changed-field">
                 <span>ETD <span class="old">1150hrs</span> <span class="new">1205hrs</span></span>
                 <span>STD <span class="old">1220hrs</span> <span class="new">1240hrs</span></span>
               </div>
             </article>
-            <article class="card muted-card compact t3-card">
+            <article class="card muted-card compact t3-card sandwich-card">
               <div class="card-header">
                 <div class="card-title-stack">
+                  <div class="sandwich-badge">Sandwich Gate</div>
                   <div class="card-title">KL 321</div>
                   <div class="card-route">AMS</div>
                 </div>
                 <div class="card-sub sandwich-gate">Gate B9</div>
               </div>
               <div class="unassigned-badge">Unassigned</div>
-              <div class="sandwich-badge">Sandwich Gate</div>
               <div class="card-times">
                 <span>ETD 1205hrs</span>
                 <span>STD 1240hrs</span>
