Keep sandwich gate label on one line

--- a/critical-updates.html
+++ b/critical-updates.html
@@ -39,7 +39,7 @@
             <article class="card muted-card compact t3-card sandwich-card">
               <div class="card-header">
                 <div class="card-title-stack">
-                  <div class="sandwich-badge">Sandwich Gate</div>
+                  <div class="sandwich-badge">SANDWICH GATE</div>
                   <div class="card-title">LH 604</div>
                   <div class="card-route">FRA</div>
                 </div>
@@ -54,7 +54,7 @@
             <article class="card muted-card compact t3-card sandwich-card">
               <div class="card-header">
                 <div class="card-title-stack">
-                  <div class="sandwich-badge">Sandwich Gate</div>
+                  <div class="sandwich-badge">SANDWICH GATE</div>
                   <div class="card-title">KL 321</div>
                   <div class="card-route">AMS</div>
                 </div>
