--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <article class="card muted-card compact t3-card sandwich-card">
               <div class="card-header">
                 <div class="card-title-stack">
-                  <div class="sandwich-badge">Sandwich Gate</div>
+                  <div class="sandwich-badge">SANDWICH GATE</div>
                   <div class="card-title">LH 604</div>
                   <div class="card-route">FRA</div>
                 </div>
@@ -49,7 +49,7 @@
             <article class="card muted-card compact t3-card sandwich-card">
               <div class="card-header">
                 <div class="card-title-stack">
-                  <div class="sandwich-badge">Sandwich Gate</div>
+                  <div class="sandwich-badge">SANDWICH GATE</div>
                   <div class="card-title">KL 321</div>
                   <div class="card-route">AMS</div>
                 </div>
