Add RT/GOT and sort in-progress by RT

--- a/in-progress.html
+++ b/in-progress.html
@@ -945,19 +945,8 @@
             <span>Next Gate</span>
             <span class="modal-next-gate">-</span>
           </div>
-          <div>
-            <span>ETD</span>
-            <span class="modal-etd">-</span>
-          </div>
-          <div>
-            <span>STD</span>
-            <span class="modal-std">-</span>
-          </div>
         </div>
-        <div class="modal-flight">
-          <div><span>Flight No.</span><span class="modal-flight-no">-</span></div>
-          <div><span>Gate Reporting</span><span class="modal-report-time">-</span></div>
-        </div>
+        <div class="modal-flight is-hidden"></div>
         <div class="modal-team">
           <div>Team Members</div>
           <ul class="modal-team-list"></ul>
@@ -966,9 +955,9 @@
           <div>Close Gate Officers</div>
           <ul class="modal-close-list"></ul>
         </div>
-        <button class="modal-action" type="button">Pull Completed</button>
+        <button class="modal-action" type="button">Gate Closed</button>
       </div>
     </div>
-    <script src="app.js?v=20250107"></script>
+    <script src="app.js?v=20250108"></script>
   </body>
 </html>
