--- a/in-progress.html
+++ b/in-progress.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles.css?v=20250107" />
   </head>
   <body>
-    <main class="page in-progress-page control-room">
+    <main class="page in-progress-page control-room full-screen">
       <div class="frame">
         <div class="sticky-wrap">
           <header class="topbar">
