feat | UI Changes

--- a/in-progress.html
+++ b/in-progress.html
@@ -33,8 +33,9 @@
           </header>
           <div class="metric-row">
             <div class="pull-count" id="pull-count-tile" role="button" tabindex="0">Pull Team <span id="pull-count">0</span></div>
-            <div class="pull-count alert-tile gate-change-count">Gate Change <span id="gate-change-count">0</span></div>
+            <div class="pull-count alert-tile gate-change-count" id="gate-change-count-tile" role="button" tabindex="0">Gate Change <span id="gate-change-count">0</span></div>
             <div class="pull-count alert-tile enhanced-count">Enhanced Screening <span id="enhanced-count">0</span></div>
+            <div class="pull-count alert-tile patdown-count" id="patdown-count-tile" role="button" tabindex="0">Pat Down <span id="patdown-count">0</span></div>
           </div>
           <h2 class="section-title">In Progress Flight <span>- Current On-going Flight - (<span id="gate-count">0</span>)</span></h2>
           <div class="alert-ticker" aria-live="polite">
