feat | adjust Pull Team Officers information and show all the Team Next deployment.

--- a/in-progress.html
+++ b/in-progress.html
@@ -902,14 +902,23 @@
         <button class="modal-close" type="button">Close</button>
       </div>
       <div class="modal-body">
+        <div class="modal-team-tabs is-hidden" role="tablist" aria-label="Team selection"></div>
         <div class="modal-summary">
           <div>
             <span>Gate</span>
             <span class="modal-gate">Gate</span>
           </div>
           <div>
-            <span>Next Gate</span>
-            <span class="modal-next-gate">-</span>
+            <span>Reporting Time</span>
+            <span class="modal-reporting-time">-</span>
+          </div>
+          <div>
+            <span>Flight Number</span>
+            <span class="modal-flight-number">-</span>
+          </div>
+          <div>
+            <span>Gate Opening Time</span>
+            <span class="modal-gate-opening-time">-</span>
           </div>
         </div>
         <div class="modal-flight is-hidden"></div>
